# Lustre-Agent

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: config.example.yaml
docs/: README.md  appendix-a-memory.md  appendix-b-mcp.md  appendix-c-skill.md  appendix-d-docker.md  architecture-design.md  day1-hello-agent.md  day2-langgraph-basics.md  day3-tool-use.md  day4-planner.md  day5-coder-supervisor.md  day6-reviewer-loop.md  day7-polish-release.md  phase-0-initialization.md  phase-1-message-bus.md  phase-2-agent-base.md  phase-3-supervisor.md  phase-4-llm-integration.md  phase-5-skill-system.md  phase-6-builtin-tools.md  phase-7-session-persistence.md  phase-8-cli-polish.md  phase-9-redis-bus.md
docs/templates/: day-template.md
skills/fastapi-expert/: SKILL.md
skills/python-expert/: SKILL.md
src/lustre/: __init__.py  __main__.py  cli.py
src/lustre/agents/: __init__.py  base.py  code_agent.py  echo_agent.py
src/lustre/bus/: __init__.py  base.py  memory_bus.py  message.py  redis_bus.py
src/lustre/config/: loader.py  wizard.py
src/lustre/models/: client.py  executor.py
src/lustre/session/: __init__.py  manager.py  store.py
src/lustre/skills/: __init__.py  manager.py  models.py
src/lustre/supervisor/: __init__.py  planner.py  state_machine.py  supervisor.py
src/lustre/tools/: __init__.py  access.py  registry.py
src/lustre/tools/builtin/: __init__.py  tools.py
src/lustre_agent/: cli.py  config.py  graph.py  llm.py  memory.py
src/lustre_agent/agents/: chat.py
src/lustre_agent/tools/: __init__.py  fs.py  shell.py
src/lustre_cli/: __init__.py  __main__.py  display.py  main.py
tests/: __init__.py  conftest.py  day1_smoke.py  day2_smoke.py  day3_smoke.py
tests/unit/agents/: test_base.py
tests/unit/bus/: __init__.py  test_memory_bus.py
tests/unit/supervisor/: test_state_machine.py
