[project]
name = "lustre-agent"
version = "0.1.0"
description = "Lustre Agent - LLM-powered coding assistant"
requires-python = ">=3.11"
dependencies = [
    "langchain-anthropic>=0.3.0",
    "typer>=0.12.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0",
    "langgraph>=1.1.8",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "langchain-core>=0.3",
    "rich>=15.0.0",
    "prompt-toolkit>=3.0.52",
]

[project.scripts]
lustre = "lustre_agent.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lustre_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py", "*_smoke.py"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
